# project

./: .gitignore  README.md  REDEME.md  celerybeat-schedule.dir
backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  test.html
backend/agent/: agent.py
backend/ai/: agent.py
backend/celery/: celery_config.py  collector.py  tasks.py
backend/db/: engine.py
backend/depenedencies/: dependencies.py
backend/helper/: date.py  format.py  server_info.py
backend/httpx/: httpx_api.py
backend/logs/: logging_route.py  logs.py
backend/migrations/: env.py
backend/migrations/versions/: 85b2b5b122ea_add_name_column_to_user.py
backend/model/: __init__.py  agent.py  api.py  db.py  file.py  monitor.py  user.py  web_analyze.py
backend/model/agent/: agent.py
backend/model/api/: api_collection.py  api_environment.py  api_request.py  api_request_history.py
backend/model/database/: database_info.py  database_server_info.py  query.py  table_info.py
backend/model/file/: file.py  file_collection.py
backend/model/fle/: file.py  file_collection.py
backend/model/monitor/: monitor.py
backend/model/user/: user.py
backend/model/web_analyze/: web_analyze.py
backend/passlib/: argon2.py  jwt_token.py  oauth2.py
backend/query/: schema_query.py
backend/routers/: agent.py  api.py  db.py  files.py  items.py  monitor.py  user.py  web_analyze.py  websocket.py
backend/routers/agent/: agent.py
backend/routers/api/: api_collection.py  api_envirionment.py  api_requeset.py  api_request.py  api_request_history.py
backend/routers/auth/: auth.py
backend/routers/database/: database_server_info.py  query.py
backend/routers/file/: file.py  file_collection.py
backend/routers/monitor/: monitor.py
backend/schemas/: db.py  filter_params.py  form.py  token.py
backend/ssh/: ssh_tunnel.py
backend/utils/: dict.py
backend/websocket/: connection_anager.py  connection_manager.py
(+170 files in other folders)
