[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioodbc>=0.5.0",
    "alembic>=1.18.1",
    "asyncio>=4.0.0",
    "asyncssh>=2.22.0",
    "bcrypt>=5.0.0",
    "celery[redis]>=5.6.2",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "openai>=2.15.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "paramiko>=4.0.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2>=2.9.11",
    "pyjwt>=2.10.1",
    "pymssql>=2.3.11",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.31",
    "sshtunnel>=0.4.0",
    "websockets>=16.0",
]
